--- a/src/docker-compose.override.yml
+++ b/src/docker-compose.override.yml
@@ -37,6 +37,17 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
       - portainer_data:/data
 
+  pgadmin:
+    container_name: pgadmin
+    restart: always
+    environment:
+       - PGADMIN_DEFAULT_EMAIL=gustavojordao2@hotmail.com
+       - PGADMIN_DEFAULT_PASSWORD=admin1234
+    ports:
+       - "5050:80"
+    volumes:
+       - portainer_data:/root/.pgadmin
+
   catalog.api:
     container_name: catalog.api
     environment:
