--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -13,6 +13,9 @@ services:
   portainer:
     image: portainer/portainer-ce
 
+  pgadmin:
+    image: dpage/pgadmin4
+
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
     build:
