--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -11,7 +11,10 @@ services:
     image: postgres
 
   orderdb:
-    image: mrc.microsoft.com/mssql/server:2022-latest
+    image: mcr.microsoft.com/mssql/server:2019-latest
+
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
 
   portainer:
     image: portainer/portainer-ce
